# sl-parser

./: README.md  pyproject.toml
.github/workflows/: python.yml
sl_parser/: __init__.py  logentry.py  logfile.py  unit.py
tests/: logentry_test.py  logfile_test.py  sample_test.py
